--- a/make/tutorials/creator.html
+++ b/make/tutorials/creator.html
@@ -327,7 +327,7 @@
                 <div class="row">
                     <div class="col-lg-10 col-lg-offset-1 text-center">
                             <div class="clearfix"></div>
-                            <p class="lead text-justify"><small>Below are some of the most popular software tools that our community of designers and makers use to create their products on Shapeways. You can find the whole range of programmatic, parametric, sculpting and modeling software. We feature both applications that are better suited for beginner 3D modelers, and those in use by professional or commercial designers.</small></p>
+                            <p class="lead text-justify"><small>Below are some of the most popular software tools that our community of designers and makers use to create their products on Aakist. You can find the whole range of programmatic, parametric, sculpting and modeling software. We feature both applications that are better suited for beginner 3D modelers, and those in use by professional or commercial designers.</small></p>
 
                             <p class="lead text-justify"><small>If you are mostly just looking to customize something, check out our Easy 3D Printing Creator Apps page.</small></p>
                     </div>   
@@ -369,7 +369,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Autodesk 123D Design</small></a>
                                 </h3>
-                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Shapeways.</p>
+                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Aakist.</p>
                             </div>
                             <div class="col-md-4 img-portfolio">
                                 <a href="portfolio-item.html">
@@ -378,7 +378,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Tinkercad</small></a>
                                 </h3>
-                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Shapeways!</p>
+                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Aakist!</p>
                             </div>
                             <div class="col-md-4 img-portfolio">
                                 <a href="portfolio-item.html">
@@ -508,7 +508,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Photoshop CC</small></a>
                                 </h3>
-                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Shapeways.</p>
+                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Aakist.</p>
                             </div>
                         </div>
                         <div class="row">
@@ -558,7 +558,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Autodesk 123D Design</small></a>
                                 </h3>
-                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Shapeways.</p>
+                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Aakist.</p>
                             </div>
                             <div class="col-md-4 img-portfolio disabled">
                                 <a href="portfolio-item.html disabled">
@@ -567,7 +567,7 @@
                                 <h3>
                                     <a href="portfolio-item.html" class="disabled"><small>Tinkercad</small></a>
                                 </h3>
-                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Shapeways!</p>
+                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Aakist!</p>
                             </div>
                             <div class="col-md-4 img-portfolio disabled">
                                 <a href="portfolio-item.html disabled">
@@ -697,7 +697,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Photoshop CC</small></a>
                                 </h3>
-                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Shapeways.</p>
+                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Aakist.</p>
                             </div>
                         </div>
                         <div class="row">
@@ -747,7 +747,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Autodesk 123D Design</small></a>
                                 </h3>
-                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Shapeways.</p>
+                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Aakist.</p>
                             </div>
                             <div class="col-md-4 img-portfolio disabled">
                                 <a href="portfolio-item.html disabled">
@@ -756,7 +756,7 @@
                                 <h3>
                                     <a href="portfolio-item.html" class="disabled"><small>Tinkercad</small></a>
                                 </h3>
-                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Shapeways!</p>
+                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Aakist!</p>
                             </div>
                             <div class="col-md-4 img-portfolio disabled">
                                 <a href="portfolio-item.html">
@@ -886,7 +886,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Photoshop CC</small></a>
                                 </h3>
-                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Shapeways.</p>
+                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Aakist.</p>
                             </div>
                         </div>
                         <div class="row">
@@ -937,7 +937,7 @@
                                 <h3>
                                     <a href="portfolio-item.html" class="disabled"><small>Autodesk 123D Design</small></a>
                                 </h3>
-                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Shapeways.</p>
+                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Aakist.</p>
                             </div>
                             <div class="col-md-4 img-portfolio disabled">
                                 <a href="portfolio-item.html">
@@ -946,7 +946,7 @@
                                 <h3>
                                     <a href="portfolio-item.html" class="disabled"><small>Tinkercad</small></a>
                                 </h3>
-                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Shapeways!</p>
+                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Aakist!</p>
                             </div>
                             <div class="col-md-4 img-portfolio disabled">
                                 <a href="portfolio-item.html">
@@ -1076,7 +1076,7 @@
                                 <h3>
                                     <a href="portfolio-item.html" class="disabled"><small>Photoshop CC</small></a>
                                 </h3>
-                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Shapeways.</p>
+                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Aakist.</p>
                             </div>
                         </div>
                         <div class="row">
@@ -1126,7 +1126,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Autodesk 123D Design</small></a>
                                 </h3>
-                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Shapeways.</p>
+                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Aakist.</p>
                             </div>
                             <div class="col-md-4 img-portfolio">
                                 <a href="portfolio-item.html">
@@ -1135,7 +1135,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Tinkercad</small></a>
                                 </h3>
-                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Shapeways!</p>
+                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Aakist!</p>
                             </div>
                             <div class="col-md-4 img-portfolio">
                                 <a href="portfolio-item.html">
@@ -1265,7 +1265,7 @@
                                 <h3>
                                     <a href="portfolio-item.html" class="disabled"><small>Photoshop CC</small></a>
                                 </h3>
-                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Shapeways.</p>
+                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Aakist.</p>
                             </div>
                         </div>
                         <div class="row">
@@ -1315,7 +1315,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Autodesk 123D Design</small></a>
                                 </h3>
-                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Shapeways.</p>
+                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Aakist.</p>
                             </div>
                             <div class="col-md-4 img-portfolio">
                                 <a href="portfolio-item.html">
@@ -1324,7 +1324,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Tinkercad</small></a>
                                 </h3>
-                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Shapeways!</p>
+                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Aakist!</p>
                             </div>
                             <div class="col-md-4 img-portfolio">
                                 <a href="portfolio-item.html">
@@ -1454,7 +1454,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Photoshop CC</small></a>
                                 </h3>
-                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Shapeways.</p>
+                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Aakist.</p>
                             </div>
                         </div>
                         <div class="row">
@@ -1504,7 +1504,7 @@
                                 <h3>
                                     <a href="portfolio-item.html" class="disabled"><small>Autodesk 123D Design</small></a>
                                 </h3>
-                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Shapeways.</p>
+                                <p>Easy-to-use yet powerful modeling tool with library of existing components or the ability to create from scratch. Also available for the iPad. Integrated and prints directly to Aakist.</p>
                             </div>
                             <div class="col-md-4 img-portfolio disabled">
                                 <a href="portfolio-item.html">
@@ -1513,7 +1513,7 @@
                                 <h3>
                                     <a href="portfolio-item.html" class="disabled"><small>Tinkercad</small></a>
                                 </h3>
-                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Shapeways!</p>
+                                <p>A fantastic beginner program, that leads you to learn complex things through simple quests. Runs right in your browser, and the skills you learn are easily transferable to more advanced programs. Integrated and prints directly to Aakist!</p>
                             </div>
                             <div class="col-md-4 img-portfolio disabled">
                                 <a href="portfolio-item.html">
@@ -1643,7 +1643,7 @@
                                 <h3>
                                     <a href="portfolio-item.html"><small>Photoshop CC</small></a>
                                 </h3>
-                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Shapeways.</p>
+                                <p>The Industry standard software for 2D content editing and creation applied to 3D design. Offers integration directly with Aakist.</p>
                             </div>
                         </div>
                         <div class="row">
