tutorials page added

--- a/make/tutorials/tutorials.html
+++ b/make/tutorials/tutorials.html
@@ -384,6 +384,143 @@
         </div>
         <!--Register-->
 
+        <br><br>
+        <div style="background-color:#f5f7f8">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <br><br><br>
+                        <h2 class="text-left">3D Printing & Design Tutorials.</h2><br>
+                        <h4 class="text-left text-justify">Here you can find information and how-tos about everything from using different 3D modeling software tools, creating 3D printable models, to managing your Aakist shop.</h4>
+                    </div>
+                </div>
+                <br><br><br><br>
+            </div>
+        </div>
+
+        <section id="portfolio" class="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" ><br><br><br><br>
+                            <h4 class="text-center"><span><a href="#" style="text-decoration:none">Most Popular</a></span></h4>
+                            <div class="caption">
+                                <p style="color:#666666;">Our most popular tutorials and must-reads.</p>
+                                <br><br><br><br>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" ><br><br><br><br>
+                            <h4 class="text-center"><span><a href="#" style="text-decoration:none">Getting Inspired</a></span></h4>
+                            <div class="caption">
+                                <p style="color:#666666;">"How I Made" and inspiration from our community.</p>
+                                <br><br><br><br>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" ><br><br><br><br>
+                            <h4 class="text-center"><span><a href="#" style="text-decoration:none">Getting Started</a></span></h4>
+                            <div class="caption">
+                                <p style="color:#666666;">The knowledge you need to start your 3D printing adventure.</p>
+                                <br><br><br><br>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" ><br><br><br><br>
+                            <h4 class="text-center"><span><a href="#" style="text-decoration:none">Model and Design</a></span></h4>
+                            <div class="caption">
+                                <p style="color:#666666;">Tutorials for software, material, design & general tips</p>
+                                <br><br><br><br>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" ><br><br><br><br>
+                            <h4 class="text-center"><span><a href="#" style="text-decoration:none">Modelling and Specific Products</a></span></h4>
+                            <div class="caption">
+                                <p style="color:#666666;">Learn how to design & model specific products of your liking</p>
+                                <br><br><br><br>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" ><br><br><br><br>
+                            <h4 class="text-center"><span><a href="#" style="text-decoration:none">3D Software Tutorials</a></span></h4>
+                            <div class="caption">
+                                <p style="color:#666666;">Learn about how to use your favourite 3D modelling software for 3D printing</p>
+                                <br><br><br><br>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" >
+                            <br><br><br><br>
+                            <h4 class="text-center"><span><a href="#" style="text-decoration:none">Review and Prep</a></span></h4>
+                            <div class="caption">
+                                <p style="color:#666666;">How to Prepare, convert to fix your model for 3D printing</p>
+                                <br><br><br><br>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" ><br><br><br><br>
+                            <h4 class="text-center"><span><a href="#" style="text-decoration:none">Running Your Shop</a></span></h4>
+                            <div class="caption">
+                                <p style="color:#666666;">From photography, marketing, everything for shop owners</p>
+                                <br><br><br><br>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail" ><br><br><br><br>
+                            <h4 class="text-center"><span><a href="#" style="text-decoration:none">For Developers</a></span></h4>
+                            <div class="caption">
+                                <p style="color:#666666;">Learn how to use Aakist API, Shape JS for your ideas</p>
+                                <br><br><br><br>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </section>
+
+        <div style="background-color:#f5f7f8;">
+            <div class="container">
+                <div class="row">
+                <br><br><br><br>
+                    <div class="col-lg-4 col-md-6 text-center">
+                        <div class="service-box">
+                            <i class="fa fa-4x fa-globe text-primary sr-icons"></i>
+                            <h3>Shapeways Help</h3>
+                            <p class="text-muted">Our support team spans multiple time-zones and is always available to help you.</p>
+                            <br><br>
+                            <a href="#services" class="page-scroll btn btn-default ">GET HELP</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 text-center">
+                        <div class="service-box">
+                            <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                            <h3>Material Sample Kit</h3>
+                            <p class="text-muted">Get started making your ideas real with 3D Printing</p><br><br><br>
+                            <a href="#services" class="page-scroll btn btn-default ">BROWSE SAMPLE KITS</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 text-center">
+                        <div class="service-box">
+                            <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
+                            <h3>Let the Community Help You</h3>
+                            <p class="text-muted">Having trouble not addressed by our tutorials? Ask our community.</p><br><br>
+                            <a href="#services" class="page-scroll btn btn-default ">GO TO FORUMS</a>
+                        </div>
+                    </div>
+                </div>
+                <br><br><br><br>
+            </div>
+        </div>
+
         <div class="intro-header1">
             <div class="col-lg-6 img">
                 <br><br><br><br>
