--- a/shop.html
+++ b/shop.html
@@ -10,10 +10,10 @@
     	<title>Aakist</title>
 
     	<!-- Bootstrap Core CSS -->
-    	<link href="css/bootstrap.min.css" rel="stylesheet">
+    	<link href="../css/bootstrap.min.css" rel="stylesheet">
 
     	<!-- Custom CSS -->
-    	<link href="css/style.css" rel="stylesheet">
+    	<link href="../css/style.css" rel="stylesheet">
 
     	<!-- Custom Fonts -->
     	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -23,7 +23,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
  		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="js/bootstrap.min.js"></script>
+		<script src="../js/bootstrap.min.js"></script>
 	</head>
 
 	<body>
