--- a/make/tutorials/creator.html
+++ b/make/tutorials/creator.html
@@ -218,19 +218,19 @@
                                                 <div class="col-sm-4">
                                                     <ul class="multi-column-dropdown">
                                                         <li class="dropdown-header text-left">About</li>
-                                                        <li><a href="#">How Aakist Works</a></li>
-                                                        <li><a href="#">Additive Manufacturing</a></li>
-                                                        <li><a href="#">Easy Checking Tools</a></li>
+                                                        <li><a href="../about/how_it_works.html">How Aakist Works</a></li>
+                                                        <li><a href="../about/additive_manufacturing.html">Additive Manufacturing</a></li>
+                                                        <li><a href="../about/easy_checking.html">Easy Checking Tools</a></li>
                                                     </ul>
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <ul class="multi-column-dropdown">
                                                         <li class="dropdown-header text-left">Tutorials & Help</li>
-                                                        <li><a href="#">3D Modelling Software</a></li>
-                                                        <li><a href="#">Tutorials</a></li>
-                                                        <li><a href="#">FAQs</a></li>
-                                                        <li><a href="#">Troubleshooting</a></li>
-                                                        <li><a href="#">Pricing</a></li>
+                                                        <li><a href="creator.html">3D Modelling Software</a></li>
+                                                        <li><a href="tutorials.html">Tutorials</a></li>
+                                                        <li><a href="faq.html">FAQs</a></li>
+                                                        <li><a href="errors.html">Troubleshooting</a></li>
+                                                        <li><a href="pricing.html">Pricing</a></li>
                                                     </ul>
                                                 </div>
                                                 <div class="col-sm-4">
