--- a/index.html
+++ b/index.html
@@ -243,6 +243,23 @@
                                             </div>  
                                         </ul>
                                     </li>
+                                    <li class="dropdown mega-dropdown">
+                                        <a class="dropdown-toggle" href="category/Miniatures.html" type="button" id="dropdownMenu1" data-toggle="dropdown" data-hover="dropdown">
+                                            Aakist For
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu mega-dropdown-menu">
+                                            <li class="dropdown-header text-left">&nbsp;&nbsp;&nbsp;&nbsp;Amplify Your business with <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aakist 3D Printing</li>
+                                            <li><a href="make/animators.html">Animators</a></li>
+                                            <li><a href="make/crowd.html">CrowdFunding</a></li>
+                                            <li><a href="make/fashion.html">Fashion Design</a></li>
+                                            <li><a href="make/casting.html">Casting Wax</a></li>
+                                            <li><a href="make/jdesigners.html">Jewellery Design</a></li>
+                                            <li><a href="make/rapid.html">Rapid Prototyping</a></li>
+                                            <li><a href="make/pdesign.html">Product Design</a></li>
+                                            <br>
+                                        </ul>
+                                    </li>
     								<li role="separator" class="divider"></li>
     								<li><a href="#">Separated link</a></li>
   								</ul>
