--- a/students.html
+++ b/students.html
@@ -15,6 +15,7 @@
     	<!-- Custom CSS -->
     	<link href="css/style.css" rel="stylesheet">
         <link href="css/style3.css" rel="stylesheet">
+        <link href="css/style1.css" rel="stylesheet">
 
     	<!-- Custom Fonts -->
     	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -406,7 +407,9 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <h1 style="color:white;">15% Off 3D Printing For Students</h1>
-                        <h3 class="text-muted"><strong>Sign up to get everyday student discounts on your projects.</strong></h3>
+                        <h3 style="color:white;" class="text-muted"><strong>Sign up to get everyday student discounts on your projects.</strong></h3>
+                        <br><br>
+                        <a href="#about" class="btn1 btn-primary1 btn-xl1 page-scroll">Join</a>
                     </div>
                 </div>
             </div>
@@ -433,7 +436,113 @@
             </div>
         </div>
 
-<footer>
+        <section id="portfolio" class="portfolio bg-darkest-gray">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 col-lg-offset-1 text-center">
+                        <h2>How Aakist Fits Your Education</h2>
+                        <hr class="small">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="portfolio-item">
+                                    <div class="service-box">
+                                        <h3>Create Your Design</h3>
+                                        <p class="text-muted">As you create your 3D model, you have access to material guidelines, tutorials and a global community and support team. </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="portfolio-item">
+                                    <div class="service-box">
+                                        <h3>Upload to Aakist</h3>
+                                        <p class="text-muted">Your 3D model goes through automated printability checks and you get instant pricing in 50+ high-quality materials.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="portfolio-item">
+                                    <div class="service-box">
+                                        <h3>We Bring it to Life</h3>
+                                        <p class="text-muted">Studying architecture, engineering or design? We 3D print your project using the latest industrial 3D printers.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="portfolio-item">
+                                    <div class="service-box">
+                                        <h3>Delivered to Your Door</h3>
+                                        <p class="text-muted">Fast turnaround time and global shipping, so you can hold your product in your hands as soon as possible.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>   
+                </div>
+            </div>
+        </section>
+
+        <section id="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 col-sm-6 portfolio-item">
+                        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                            <img src="img/blog.jpg" class="img-responsive" alt="">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>National Week of Making and Aakist</h4>
+                            <p class="text-muted">The maker movement is no secret anymore and that's a good thing. People the world over are recognizing the power of applying </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 portfolio-item">
+                        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                            <img src="img/blog.jpg" class="img-responsive" alt="">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Aakist and New York Public Library to La</h4>
+                            <p class="text-muted">We are announcing an exciting partnership with the New York Public Library TechConnect program to develop an open </p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 portfolio-item">
+                        <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                            <img src="img/blog.jpg" class="img-responsive" alt="">
+                        </a>
+                        <div class="portfolio-caption">
+                            <h4>Teach 3D Design On Skillshare, Earn $100</h4>
+                            <p class="text-muted">Aakist and Skillshare challenge you to create the 3D printing class you wish you could have taken when developing your </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="content-section-a bg-light-gray">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Aakist Education Grant: Up to $1000 to Realize Your Idea</h2>
+                    <p class="lead"><smallAre you a student pushing the boundaries of 3D printing? Are you experimenting with new applications for 3D printing and design, engaging your creativity and pushing materials to their limits?</small></p>
+
+                    <p class="lead"><small>Now accepting grant applications until October 31, 2016! Submit application materials to education@Aakist.com</small></p>
+
+                    <p class="lead"><small>The team at Aakist is excited to support the next generation of 3D printing innovation through our Education Grant Program. Twice a year Aakist will award printing credit, up to $1000 in value, to select student projects that expand, enhance and push the boundaries of 3D printing.</small></p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <br><br><br>
+                    <img class="img-responsive" src="https://static1.sw-cdn.net/files/cms/landing-pages/educationGrant.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
