--- a/checkout/payment.html
+++ b/checkout/payment.html
@@ -7,7 +7,7 @@
     	<meta name="description" content="">
     	<meta name="author" content="">
 
-    	<title>Aakist</title>
+    	<title>Aakist-Checkout</title>
 
     	<!-- Bootstrap Core CSS -->
     	<link href="../css/bootstrap.min.css" rel="stylesheet">
