--- a/community.html
+++ b/community.html
@@ -19,7 +19,7 @@
     	<meta name="description" content="">
     	<meta name="author" content="">
 
-    	<title>Aakist</title>
+    	<title>Aakist-Community</title>
 
     	<!-- Bootstrap Core CSS -->
     	<link href="css/bootstrap.min.css" rel="stylesheet">
