--- a/make/about/how_it_works.html
+++ b/make/about/how_it_works.html
@@ -7,7 +7,7 @@
     	<meta name="description" content="">
     	<meta name="author" content="">
 
-    	<title>Aakist</title>
+    	<title>Aakist How It Works</title>
 
     	<!-- Bootstrap Core CSS -->
     	<link href="../../css/bootstrap.min.css" rel="stylesheet">
