--- a/make/tutorials/pricing.html
+++ b/make/tutorials/pricing.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Aakist</title>
+        <title>Aakist-Pricing</title>
 
         <!-- Bootstrap Core CSS -->
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
